--- a/tarea/templates/eventos.html
+++ b/tarea/templates/eventos.html
@@ -1,5 +1,7 @@
-{% extends 'base.html'%}
+{% extends 'base.html' %}
 
 {% block content %}
-<h1>eventos</h1>
+
+<h1>Lista de eventos</h1>
+
 {% endblock %}
